--- a/lr11.html
+++ b/lr11.html
@@ -26,7 +26,7 @@
     <div id="modal" class="modal">
         <div class="modal-content">
             <p id="result"></p>
-            <button id="restart">Restart</button>
+            <button id="restart">Start</button>
         </div>
     </div>
     <script src="script.js"></script>
